objects/SFDC_Purchase_Items__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001NaBAEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Unit_of_Measure__c</fullName>
        <label>Standard Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_SKU__c</fullName>
        <label>Vendor SKU</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item_Code__c</fullName>
        <label>Purchase Item Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <description>A catalog of your regularly purchased items.</description>
    <label>Purchase Item</label>
    <nameField>
        <label>Purchase Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllPurchaseItems</fullName>
        <columns>NAME</columns>
        <columns>Preferred_Vendor__c</columns>
        <columns>Standard_Cost__c</columns>
        <columns>Vendor_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Purchase Items</label>
    </listViews>
</CustomObject>